change(handler): change auth handler and user handler
